# quillus-daemos

Zen/Community/: CMakeLists.txt
Zen/Community/AccountClient/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  plugin.xml
Zen/Community/AccountCommon/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  I_Account.hpp  I_AccountController.hpp  I_AccountModel.hpp  I_AccountService.hpp  I_AccountView.hpp  I_Group.hpp  I_GroupController.hpp  I_GroupMemberController.hpp  I_GroupMemberModel.hpp  I_GroupMemberView.hpp  I_GroupModel.hpp  I_GroupView.hpp  I_PermissibleResource.hpp  subscription.hpp
Zen/Community/AccountModel/: AccountModel.sql  CMakeLists.template  CMakeLists.txt  Configuration.hpp  I_AccountDataCollection.hpp  I_AccountDataMap.hpp  I_AccountDomainObject.hpp  I_GroupDataCollection.hpp  I_GroupDataMap.hpp  I_GroupDomainObject.hpp  I_GroupMemberDataCollection.hpp  I_GroupMemberDataMap.hpp  I_GroupMemberDomainObject.hpp  I_PermissionDataCollection.hpp  I_PermissionDataMap.hpp  I_PermissionDomainObject.hpp  account.sqlite
Zen/Community/AccountProtocol/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  I_AccountModelUpdateMessage.hpp  I_AccountProtocolManager.hpp  I_CreateAccountRequest.hpp  I_CreateAccountResponse.hpp  I_CreateGroupRequest.hpp  I_CreateGroupResponse.hpp  I_DeleteAccountRequest.hpp  I_DeleteAccountResponse.hpp  I_DeleteGroupRequest.hpp  I_DeleteGroupResponse.hpp  I_GroupModelUpdateMessage.hpp  I_Message.hpp  I_ReadAccountRequest.hpp  I_ReadAccountResponse.hpp  I_ReadGroupRequest.hpp  I_ReadGroupResponse.hpp  I_SubscribeAccountModelRequest.hpp  I_SubscribeAccountModelResponse.hpp  I_SubscribeGroupModelRequest.hpp  I_SubscribeGroupModelResponse.hpp  I_UnsubscribeAccountModelRequest.hpp  I_UnsubscribeAccountModelResponse.hpp  I_UnsubscribeGroupModelRequest.hpp  I_UnsubscribeGroupModelResponse.hpp  I_UpdateAccountRequest.hpp  I_UpdateAccountResponse.hpp  I_UpdateGroupRequest.hpp  I_UpdateGroupResponse.hpp
Zen/Community/AccountServer/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  plugin.xml
Zen/Community/ChatClient/: CMakeLists.template  CMakeLists.txt  ChatClient.vcproj
Zen/Community/ChatCommon/: CMakeLists.template  CMakeLists.txt  ChatCommon.vcproj  Configuration.hpp  I_Channel.hpp  I_ChannelController.hpp  I_ChannelInfo.hpp  I_ChannelMemberController.hpp  I_ChannelMemberModel.hpp  I_ChannelMemberView.hpp  I_ChannelModel.hpp  I_ChannelPermissions.hpp  I_ChannelSession.hpp  I_ChannelView.hpp  I_Channels.hpp  I_ChatCommand.hpp  I_ChatCommandController.hpp  I_ChatCommandModel.hpp  I_ChatCommandView.hpp  I_ChatEvent.hpp  I_ChatEventController.hpp  I_ChatEventModel.hpp  I_ChatEventView.hpp  I_ChatMessage.hpp  I_ChatMessages.hpp  I_ChatService.hpp  I_ChatSession.hpp  I_User.hpp  I_UserInfo.hpp  I_UserPermissions.hpp  I_Users.hpp
Zen/Community/ChatModel/: CMakeLists.template  CMakeLists.txt  ChatModel.sql  Configuration.hpp  I_AllowGroupDataCollection.hpp  I_AllowGroupDataMap.hpp  I_AllowGroupDomainObject.hpp  I_AllowUserDataCollection.hpp  I_AllowUserDataMap.hpp  I_AllowUserDomainObject.hpp  I_ChatChannelDataCollection.hpp  I_ChatChannelDataMap.hpp  I_ChatChannelDomainObject.hpp  I_ChatCommandDataCollection.hpp  I_ChatCommandDataMap.hpp  I_ChatCommandDomainObject.hpp  I_ChatEventDataCollection.hpp  I_ChatEventDataMap.hpp  I_ChatEventDomainObject.hpp  I_ChatLogDataCollection.hpp  I_ChatLogDataMap.hpp  I_ChatLogDomainObject.hpp  I_DenyGroupDataCollection.hpp  I_DenyGroupDataMap.hpp  I_DenyGroupDomainObject.hpp  I_DenyUserDataCollection.hpp  I_DenyUserDataMap.hpp  I_DenyUserDomainObject.hpp
Zen/Community/ChatProtocol/: CMakeLists.template  CMakeLists.txt  ChatProtocol.vcproj  Configuration.hpp  I_ChannelJoinRequest.hpp  I_ChannelJoinResponse.hpp  I_ChannelLeaveRequest.hpp  I_ChannelLeaveResponse.hpp  I_ChannelListRequest.hpp  I_ChannelListResponse.hpp  I_ChannelModelUpdateMessage.hpp  I_ChatMessage.hpp  I_ChatProtocolManager.hpp  I_ChatRequest.hpp  I_ChatResponse.hpp  I_ChatSessionRequest.hpp  I_ChatSessionResponse.hpp  I_CreateChannelRequest.hpp  I_CreateChannelResponse.hpp  I_DeleteChannelRequest.hpp  I_DeleteChannelResponse.hpp  I_JoinChannelRequest.hpp  I_JoinChannelResponse.hpp  I_Message.hpp  I_ReadChannelRequest.hpp  I_ReadChannelResponse.hpp  I_SubscribeChannelModelRequest.hpp  I_SubscribeChannelModelResponse.hpp  I_UnsubscribeChannelModelRequest.hpp  I_UnsubscribeChannelModelResponse.hpp  I_UpdateChannelRequest.hpp  I_UpdateChannelResponse.hpp  I_UserListRequest.hpp  I_UserListResponse.hpp
Zen/Community/ChatServer/: CMakeLists.template  CMakeLists.txt  ChatServer.vcproj
Zen/Community/LobbyClient/: LobbyClient.vcproj
Zen/Community/LobbyCommon/: LobbyCommon.vcproj
Zen/Community/LobbyProtocol/: LobbyProtocol.vcproj
Zen/Community/LobbyServer/: LobbyServer.vcproj
Zen/Community/SessionClient/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  SessionClient.vcproj  plugin.xml
Zen/Community/SessionCommon/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  I_Attribute.hpp  I_Session.hpp  I_SessionService.hpp  SessionCommon.vcproj
Zen/Community/SessionModel/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  I_AccountDataCollection.hpp  I_AccountDataMap.hpp  I_AccountDomainObject.hpp  SessionModel.sql
Zen/Community/SessionProtocol/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  I_DataRequest.hpp  I_DataResponse.hpp  I_LoginRequest.hpp  I_LoginResponse.hpp  I_Message.hpp  I_Request.hpp  I_Response.hpp  I_SessionProtocolManager.hpp  SessionProtocol.vcproj
Zen/Community/SessionServer/: CMakeLists.template  CMakeLists.txt  Configuration.hpp  SessionServer.vcproj  plugin.xml
Zen/Community/community/: readme.txt
Zen/Core/: CMakeLists.template  CMakeLists.txt  Core.sln  Scripting.hpp  main_env_vars.vsprops.EXAMPLE
Zen/Core/Event/: CMakeLists.txt  (+10 more)
Zen/Engine/: CMakeLists.template  CMakeLists.txt  Engine.sln
Zen/Enterprise/: CMakeLists.template  CMakeLists.txt  Enterprise.sln
Zen/Worlds/: CMakeLists.txt
Zen/plugins/: CMakeLists.txt
Zen/test/: CMakeLists.txt  accountTests.sql
(+3706 files in other folders)
